[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/virus.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/basic_virus.gd" type="Script" id=2]
[ext_resource path="res://scenes/basic_virus_laser.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/basic_virus.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 64.877

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.2074, 26.545 )

[node name="virus" instance=ExtResource( 1 )]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )
health = 20
speed = 40
damage = 20
points = 10
basic_virus_laser = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -85 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="." index="3"]
position = Vector2( 0, 85 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="." index="4"]
position = Vector2( 85, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="." index="5"]
position = Vector2( -85, 0 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="ShootTimer" parent="." index="6"]
wait_time = 2.0
autostart = true

[node name="MoveTimer" type="Timer" parent="." index="7"]

[node name="identifier" parent="." index="8"]
game_id = "basic_virus"
[connection signal="area_entered" from="." to="." method="_on_virus_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
